# CMake-Commands

./: CMakeLists.txt  README.md
external_lib/: subtract.cpp
src/: app.cpp  main.cpp  sum.cpp
